优化 GitHub Issue 和 PR 模板，提升问题报告与贡献流程的规范性。重构 Bug 报告和功能请求模板，增加环境信息、功能分类、复现步骤等结构化字段，便于快速定位问题。更新 PR 模板，加入代码质量、资源管理、国际化等检查清单，确保代码提交的标准化。此外，调整 `MainActivity.java` 中的代码以兼容 Android API 24。